[package]
name = "killall"
version = "0.1.0"
authors = ["Xavier Gillard <xavier.gillard@uclouvain.be>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt   = "0.3.13"
regex       = "1.3.6"
lazy_static = "1.4.0"